// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeEmptyString should return false for [ '' ] 1`] = `
"    
    expect([32mexpected[39m).toBeEmptyString()
    
    [1mexpected[22m should be an [32mempty string[39m.
    got: [31marray[39m
"
`;

exports[`testing toBeEmptyString should return false for 1 1`] = `
"    
    expect([32mexpected[39m).toBeEmptyString()
    
    [1mexpected[22m should be an [32mempty string[39m.
    got: [31mnumber[39m
"
`;

exports[`testing toBeEmptyString should return false for 4141 1`] = `
"    
    expect([32mexpected[39m).toBeEmptyString()
    
    [1mexpected[22m should be an [32mempty string[39m.
    got: [31mexpected.length == 4[39m
"
`;

exports[`testing toBeEmptyString should return false for empty string when isNot true 1`] = `
"    
    expect([32mexpected[39m).not.toBeEmptyString()
    
    [1mexpected[22m should not be an [32mempty string[39m.
    got: [31mexpected.length == 0[39m
"
`;
